--- a/package.json
+++ b/package.json
@@ -20,8 +20,16 @@
   },
   "homepage": "https://github.com/makersacademy/todo_challenge#readme",
   "devDependencies": {
+    "angular-mocks": "^1.4.6",
+    "angular-route": "^1.4.6",
     "bower": "^1.5.2",
     "http-server": "^0.8.0",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.9",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "phantomjs": "^1.9.18",
     "protractor": "^2.2.0"
   }
 }
