--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 script:
-  - npm test --single-run
+  - npm test
   - node_modules/.bin/protractor test/e2e/conf.js --browser=firefox
 language: node_js
 node_js:
-  - "0.10"
+  - "0.12.7"
 before_script:
-  - bower install
+  - ./node_modules/bower/bin/bower install
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
   - webdriver-manager update
